syntax = "proto3";
package messages;

option go_package = "github.com/dumacp/go-schservices/pkg/messages";


enum State {
	STARTED = 0;
	FINISHED = 1;
	CANCELED = 2;
	READY = 3;
}

message Itinerary {
	string id = 1;
	string name = 2;
}

message Route {
	string id = 1;
	string code = 2;
	string name = 3;
}

message Driver {
	string id = 1;
	string fullname = 2;
}

message ScheduleService {
            string id = 1;
            State state = 2;
            string organizationId = 3;
            int64 scheduleDateTime = 4;
            Itinerary itinerary = 5;
            Route route = 6;
            Driver driver = 7;
            repeated string driverIds = 8;
}

message ScheduleServices {
	string version = 1;	
	repeated ScheduleService scheduleServices = 2;
}
